--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "body-parser": "^1.15.1",
-    "express": "~3.4.4"
+    "express": "~3.4.4",
+    "request": "^2.72.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
